@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/06
+	* Simplified the Utsusemi/Bunsinjyutsu check to only block weapon skills
+	  that do not ignore offensive cards. [Skotlex]
 	* Added support for the 2 new packet versions. [Zephiris]
 	* Fixed the loginlog's `user` column length (use upgrade_svn9957.sql)
 2007/03/05
